[package]
name = "ipxmas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
paw = "1.0.0"
rayon = "1.6.1"
structopt = { version = "0.3.26", features = [ "paw" ] }
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_json = "1.0.91"
actix-web = "4"